--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="Container">
         <section class="searchbar/light-dark-mode">
             <form>
-                <input type="text" id="location" name="location" maxlength="100" placeholder="Search Location..." value="East Bernard">
+                <input type="text" id="location" name="location" maxlength="100" placeholder="Search City...">
             </form>
-            <button type="button">Search</button>
+            <button type="button" class="searchButton">Search</button>
         </section>
         <section class="description-of-weather">
             <div class='brief-description'>
@@ -45,22 +45,22 @@
         </section>
         <section class="4-day-forecast">
             <div class='day1'>
-                <img class ="day1image" src="images/snowy.png">
+                <img class ="day1image" src="images/snow.png">
                 <div class="day1-min-max">60°/75°</div>
                 <div class='day1-date'>TOM</div>
             </div>
             <div class='day2'>
-                <img class ="day2image" src="images/snowy.png">
+                <img class ="day2image" src="images/snow.png">
                 <div class="day2-min-max">60°/75°</div>
                 <div class='day2-date'>MON</div>
             </div>
             <div class='day3'>
-                <img class ="day3image" src="images/snowy.png">
+                <img class ="day3image" src="images/snow.png">
                 <div class="day3-min-max">60°/75°</div>
                 <div class='day3-date'>TUE</div>
             </div>
             <div class='day4'>
-                <img class ="day4image" src="images/snowy.png">
+                <img class ="day4image" src="images/snow.png">
                 <div class="day4-min-max">60°/75°</div>
                 <div class='day4-date'>WED</div>
             </div>
