Updated UI and added functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <form>
                 <input type="text" id="location" name="location" maxlength="100" placeholder="Search City...">
             </form>
-            <button type="button" class="searchButton">Search</button>
+            <img src="images/magnifying-glass-icon.png" class="searchButton">
         </section>
         <section class="description-of-weather">
             <div class='brief-description'>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="humidity-data">
                     <img class="humidity-data-icon smallicon" src="images/humidity.png">
-                    <div class="humidity-data-text" title="Humidity Percentage">-</div>
+                    <div class="humidity-data-text" title="Humidity Level">-</div>
                 </div>
             </div>
         </section>
@@ -66,9 +66,9 @@
             </div>
         </section>
         <section class="temp-conversion">
-            <div class = 'fahrenheit'>°F</div>
+            <div id="fahrenheit">°F</div>
             <div class='separator'>|</div>
-            <div class='celsius'>°C</div>
+            <div id="celsius">°C</div>
 
         </section>
 
