--- a/index.html
+++ b/index.html
@@ -73,5 +73,9 @@
         </section>
 
     </div>
+    <footer>
+        <p class ='footer'></p>
+        <p><a href="https://github.com/JagroopBagri" target="_blank"><img src='github-brands.svg' alt='Github Logo' class='fa-github' width = 25px></a></p> 
+    </footer>
 </body>
 </html>
