--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <form>
                 <input type="text" id="location" name="location" maxlength="100" placeholder="Search City...">
             </form>
-            <img src="images/magnifying-glass-icon.png" class="searchButton">
+            <img src="images/white-magnifying-glass-icon.png" class="searchButton">
         </section>
         <section class="description-of-weather">
             <div class='brief-description'>
@@ -31,15 +31,24 @@
             <div class="additional-data">
                 <div class="wind-data">
                     <img class="wind-data-icon smallicon" src="images/windLevel.png">
-                    <div class="wind-data-text" title="Wind Speed">-</div>
+                    <div class="ad-data">
+                        <div>Wind Speed</div>
+                        <div class="wind-data-text" title="Wind Speed">-</div>
+                    </div>
                 </div>
                 <div class="rain-data">
                     <img class="rain-data-icon smallicon" src="images/umbrella.png">
-                    <div class="rain-data-text" title="Chance of Rain">-</div>
+                    <div class="ad-data">
+                        <div>Chance of Rain</div>
+                        <div class="rain-data-text" title="Chance of Rain">-</div>
+                    </div>
                 </div>
                 <div class="humidity-data">
                     <img class="humidity-data-icon smallicon" src="images/humidity.png">
-                    <div class="humidity-data-text" title="Humidity Level">-</div>
+                    <div class="ad-data">
+                        <div>Humidity Level</div>
+                        <div class="humidity-data-text" title="Humidity Level">-</div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,7 +84,7 @@
     </div>
     <footer>
         <p class ='footer'></p>
-        <p><a href="https://github.com/JagroopBagri" target="_blank"><img src='github-brands.svg' alt='Github Logo' class='fa-github' width = 25px></a></p> 
+        <p><a href="https://github.com/JagroopBagri" target="_blank"><img src='GitHub-Mark-Light-32px.png' alt='Github Logo' class='fa-github' width = 25px></a></p> 
     </footer>
 </body>
 </html>
